<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".FindServerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_send_white_24dp"
            android:drawableLeft="@drawable/ic_send_white_24dp"
            android:text="@string/action_add"
            android:textSize="@dimen/dimen_textSize6"
            android:theme="@style/PrimaryButton" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_refresh_white_24dp"
            android:drawableLeft="@drawable/ic_refresh_white_24dp"
            android:text="@string/action_refresh"
            android:textSize="@dimen/dimen_textSize6"
            android:theme="@style/PrimaryButton" />

        <Button
            android:id="@+id/toggle_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_check_white_24dp"
            android:drawableLeft="@drawable/ic_play_arrow_white_24dp"
            android:text="@string/action_toggle_check"
            android:textSize="@dimen/dimen_textSize6"
            android:theme="@style/PrimaryButton" />
    </LinearLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>