<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/dimen_margin4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dimen_margin4"
        android:layout_marginRight="@dimen/dimen_margin4"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin4">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_name"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dimen_textSize5" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin2">

            <EditText
                android:id="@+id/ip_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_ip"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dimen_textSize5" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin2">

            <EditText
                android:id="@+id/port_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_port"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/dimen_textSize5" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin4"
            android:layout_marginBottom="@dimen/dimen_margin6"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_close_white_24dp"
                android:drawableLeft="@drawable/ic_close_white_24dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_margin3"
                android:text="@string/action_cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/dimen_textSize6"
                android:theme="@style/ErrorButton" />


            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_save_white_24dp"
                android:drawableLeft="@drawable/ic_save_white_24dp"
                android:gravity="center_horizontal"
                android:padding="@dimen/dimen_margin3"
                android:text="@string/action_save"
                android:textAllCaps="false"
                android:textSize="@dimen/dimen_textSize6"
                android:theme="@style/PrimaryButton" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
