<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".Screen1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/find_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_search_white_24dp"
            android:drawableLeft="@drawable/ic_search_white_24dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/dimen_margin3"
            android:text="@string/action_find"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen_textSize6"
            android:theme="@style/PrimaryButton" />


        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add_white_24dp"
            android:drawableLeft="@drawable/ic_add_white_24dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/dimen_margin3"
            android:text="@string/action_add"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen_textSize6"
            android:theme="@style/PrimaryButton" />


        <Button
            android:id="@+id/delete_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_delete_white_24dp"
            android:drawableLeft="@drawable/ic_delete_white_24dp"
            android:gravity="center_horizontal"
            android:padding="@dimen/dimen_margin3"
            android:text="@string/action_delete_all"
            android:textAllCaps="false"
            android:textSize="@dimen/dimen_textSize6"
            android:theme="@style/ErrorButton"
            android:tint="@color/white" />

    </LinearLayout>

    <ListView
        android:id="@+id/lst"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>